tests/baselines/reference/defaultValueInFunctionTypes.errors.txt
==== tests/cases/compiler/defaultValueInFunctionTypes.ts (2 errors) ====
    var x: (a: number = 1) => number;
            ~~~~~~~~~~~~~
!!! defaultValueInFunctionTypes.ts(1,9): error TS2174: A parameter initializer is only allowed in a function or constructor implementation.
    var y = <(a : string = "") => any>(undefined)
              ~~~~~~~~~~~~~~~
!!! defaultValueInFunctionTypes.ts(2,11): error TS2174: A parameter initializer is only allowed in a function or constructor implementation.